<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.howardbates.atbat.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:text="@string/strikesButton"
		android:id="@+id/button"
		android:layout_marginTop="70dp"
		android:typeface="monospace"
		android:layout_below="@+id/textView"
		android:layout_toLeftOf="@+id/textView2"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:text="@string/ballsButton"
		android:id="@+id/button2"
		android:layout_below="@+id/button"
		android:layout_alignLeft="@+id/button"
		android:layout_alignStart="@+id/button"
		android:typeface="monospace"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:text="@string/foulsButton"
		android:id="@+id/button3"
		android:layout_below="@+id/button2"
		android:layout_alignLeft="@+id/button2"
		android:layout_alignStart="@+id/button2"
		android:typeface="monospace"/>

	<TextView
		android:layout_width="60dp"
		android:layout_height="50dp"
		android:id="@+id/textView2"
		android:layout_alignTop="@+id/button"
		android:layout_alignLeft="@+id/textView4"
		android:layout_alignStart="@+id/textView4"
		android:layout_above="@+id/button2"
		android:gravity="center_vertical|center_horizontal"
		android:textStyle="bold"
		android:typeface="monospace"
		android:hint="@string/zero"
		android:textSize="28sp"/>

	<TextView
		android:layout_width="60dp"
		android:layout_height="50dp"
		android:id="@+id/textView3"
		android:layout_above="@+id/button3"
		android:layout_alignLeft="@+id/textView2"
		android:layout_alignStart="@+id/textView2"
		android:textStyle="bold"
		android:typeface="monospace"
		android:hint="@string/zero"
		android:textSize="28sp"
		android:gravity="center_vertical|center_horizontal"/>

	<TextView
		android:layout_width="60dp"
		android:layout_height="50dp"
		android:id="@+id/textView4"
		android:layout_alignBottom="@+id/button3"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:textStyle="bold"
		android:typeface="monospace"
		android:hint="@string/zero"
		android:textSize="28sp"
		android:gravity="center_vertical|center_horizontal"/>

	<TextView
		android:layout_width="75dp"
		android:layout_height="50dp"
		android:text="@string/inningLabel"
		android:id="@+id/textView5"
		android:gravity="center_vertical|center_horizontal"
		android:textStyle="bold"
		android:textSize="16sp"
		android:typeface="monospace"
		android:layout_marginTop="53dp"
		android:layout_below="@+id/button4"
		android:layout_toLeftOf="@+id/textView6"
		android:layout_marginRight="52dp"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="100dp"
		android:layout_height="50dp"
		android:text="@string/outsButton"
		android:id="@+id/button4"
		android:typeface="monospace"
		android:layout_below="@+id/button3"
		android:layout_alignLeft="@+id/button3"
		android:layout_alignStart="@+id/button3"/>

	<TextView
		android:layout_width="60dp"
		android:layout_height="50dp"
		android:id="@+id/textView6"
		android:layout_alignBottom="@+id/button4"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:textStyle="bold"
		android:typeface="monospace"
		android:hint="@string/zero"
		android:textSize="28sp"
		android:gravity="center_vertical|center_horizontal"/>

	<ImageView
		android:layout_width="30dp"
		android:layout_height="40dp"
		android:id="@+id/imageView"
		android:background="@drawable/uparrow"
		android:layout_alignTop="@+id/textView5"
		android:layout_toLeftOf="@+id/textView6"/>

	<TextView
		android:layout_width="60dp"
		android:layout_height="50dp"
		android:textStyle="bold"
		android:typeface="monospace"
		android:hint="@string/zero"
		android:textSize="28sp"
		android:id="@+id/textView7"
		android:gravity="center_vertical|center_horizontal"
		android:layout_alignTop="@+id/imageView"
		android:layout_toRightOf="@+id/imageView"/>

</RelativeLayout>
